# huckle

./: .gitignore  .travis.yml  CHANGELOG  Dockerfile  LICENSE.txt  MANIFEST.in  NOTES.txt  README.md  README.rst  config.yml  huck.py  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.cache/v/cache/: lastfailed
.circleci/: config.yml
huck/: __init__.py  __main__.py  config.py  huck.py
huckle/: __init__.py  __main__.py  config.py  credential.py  error.out  hclinav.py  huckle.py  hutils.py  logger.py  package.py  utils.py
huckle/auth/: authenticator.py  credential.py
huckle/data/: huckle.1
huckle/tests/: test_huckle_pull.py  test_huckle_pull.sh
scripts/: compile
test/: test_hello.py
tests/: conftest.py  test_auth_disabled.py  test_auth_enabled_authenticated.py  test_auth_enabled_no_auth_headers.py  test_authenticated.py  test_authorized.py  test_hello.py  test_huckle_cli_install.py  test_huckle_install.py  test_huckle_pull.py  test_noauth.py  test_unauthenticated.py  test_unauthorized.py
